--- a/css/app.css
+++ b/css/app.css
@@ -3,19 +3,6 @@
   padding: 0;
 }
 
-.logos {
-  float: left;
-  width: 120px;
-  margin-left: 3%;
-  padding: .5% 0;
-}
-
-.top-bar {
-  width: 1100px;
-  padding-top: 1%;
-  margin-top: 1%;
-}
-
 .row {
   max-width: 100%;
 }
@@ -83,8 +70,8 @@
 
 #header1 #socialNumber #socialWrap{
   float: right;
-  margin-right: 0;
-  width: 16%;
+  margin-right: 2%;
+  width: 10%;
 }
 
 #header1 #socialNumber #socialWrap .phone{
@@ -94,16 +81,41 @@
 
 #header1 #socialNumber #socialWrap #social.icons{
   float: left;
-  width: 50%;
   cursor: pointer;
 }
 
-#header1 #socialNumber #socialWrap #social.icons img{
-  width: 10%;
+#header1 #socialNumber #socialWrap #social.icons, #header1 #socialNumber #socialWrap #social.icons img{
+  width: 30%;
 }
 
 #header1 #socialNumber #socialWrap #social.icons img:nth-child(1){
   margin-right: 5%;
+}
+
+.logos {
+  float: left;
+  width: 120px;
+  margin-left: 3%;
+  padding: .5% 0;
+}
+
+.top-bar {
+  width: 940px !important;
+  padding-top: 1.7%;
+  margin: 1% 0 0 20%;
+  float: left;
+}
+
+.top-bar.columns{
+  padding-right: 0;
+}
+
+.top-bar-section ul li{
+  margin-right: 1%;
+}
+
+.top-bar-section ul li:last-child{
+  margin-right: 0;
 }
 
 #header1 .top-bar-section ul li:hover:not(.has-form) > a {
@@ -202,17 +214,15 @@ ul li.slideUnder a {
   background: #0a0699;
 }
 
-#headMenu li:last-child{
+.scsLogo{
   cursor: pointer;
-  width: 11%;
-  margin-top: -2%;
+  width: 4%;
+  margin-top: 1.5%;
+  margin-right: 3%;
+  float: right;
 }
 
-#headMenu li:last-child a{
-  width: 100%;
-}
-
-#headMenu li:last-child a img{
+.scsLogo a img{
   cursor: pointer;
   width: 100%;
 }
@@ -278,18 +288,18 @@ ul li.slideUnder a {
   position: fixed;
   z-index: -1;
   top: 0;
+  min-width: 2050px !important;
+  min-height: 1150px !important;
   width: 100% !important;
-  height: 900px !important;
+  height: 100% !important;
   opacity: .2;
 }
 
-#bck #bckRotate {
-  width: 100% !important;
-  height: 100%!important;
+#bck #bckRotate{
   margin: 0;
 }
 
-#bck #bckRotate li {
+#bck #bckRotate li{
   position: absolute;
   z-index: 1;
   width: 100% !important;
@@ -298,19 +308,8 @@ ul li.slideUnder a {
 
 #bck #bckRotate li img{
   width: 100%;
+  height: 100%;
 }
-
-/*#bckRotate{
-  width: 100%;
-  position: fixed;
-  z-index: -1;
-  top: 0;
-}
-
-#bckRotate img{
-  width: 100%;
-  opacity: .2;
-}*/
 /*END HOME*/
 
 
@@ -802,59 +801,290 @@ ul li.slideUnder a {
 
 
 
-@media only screen and (min-width: 1367px) and (max-width: 1560px) {
+@media only screen and (min-width: 1530px) and (max-width: 1711px) {
   #header1 #socialNumber{
     padding: .5% 0 2%;
   }
 
   #header1 #socialNumber #socialWrap{
-    width: 20% !important;
+    width: 12%;
   }
 }
 
 
 
-@media only screen and (min-width: 1207px) and (max-width: 1366px) {
+@media only screen and (min-width: 1429px) and (max-width: 1529px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 12%;
+  }
+
   .top-bar {
-    width: 1000px !important;
-    padding-top: 2.2%;
-    margin-top: 1%;
+    margin: 1% 0 0 13%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1357px) and (max-width: 1428px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 14%;
+  }
+
+  .top-bar {
+    margin: 1% 0 0 11%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1277px) and (max-width: 1356px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 14%;
+  }
+
+  .top-bar {
+    margin: 1% 0 0 6%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1227px) and (max-width: 1276px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 14%;
+  }
+
+  .top-bar {
+    width: 900px !important;
+    margin: 1% 0 0 4%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1218px) and (max-width: 1226px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 15%;
+  }
+
+  .top-bar {
+    width: 890px !important;
+    margin: 1% 0 0 4%;
+    padding-top: 2.5%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1170px) and (max-width: 1217px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 15%;
+  }
+
+  .top-bar {
+    width: 850px !important;
+    margin: 1% 0 0 4%;
+    padding-top: 2.5%;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1147px) and (max-width: 1169px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 15%;
+  }
+
+  .top-bar {
+    width: 820px !important;
+    margin: 1% 0 0 4%;
+    padding-top: 2.5%;
   }
 
   .top-bar ul li a {
     font-size: .8em !important;
   }
 
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1134px) and (max-width: 1146px) {
   #header1 #socialNumber{
-    padding: 1% 0 2.5%;
+    padding: .5% 0 2.5%;
   }
 
   #header1 #socialNumber #socialWrap{
-    width: 25% !important;
+    width: 17%;
   }
 
-  /*CSS TARGETING MOZILLA FIREFOX BROWSER*/
-  @-moz-document url-prefix() {
-    .top-bar{
-      width: 1000px !important;
-      margin-right: 0;
-    }
-
-    .top-bar ul li a {
-      font-size: .8em !important;
-    }
-
-    .top-bar-section ul li{
-      margin-right: 0;
-    }
+  .top-bar {
+    width: 820px !important;
+    margin: 1% 0 0 4%;
+    padding-top: 2.5%;
   }
-  /**/
+
+  .top-bar ul li a {
+    font-size: .8em !important;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1098px) and (max-width: 1133px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 17%;
+  }
+
+  .top-bar {
+    width: 800px !important;
+    margin: 1% 0 0 3%;
+    padding-top: 2.5%;
+  }
+
+  .top-bar ul li a {
+    font-size: .8em !important;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 1013px) and (max-width: 1097px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 17%;
+  }
+
+  .top-bar {
+    width: 710px !important;
+    margin: 1% 0 0 3%;
+    padding-top: 2.5%;
+  }
+
+  .top-bar ul li a {
+    font-size: .7em !important;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
+}
+
+
+
+@media only screen and (min-width: 950px) and (max-width: 1012px) {
+  #header1 #socialNumber{
+    padding: .5% 0 2.5%;
+  }
+
+  #header1 #socialNumber #socialWrap{
+    width: 19%;
+  }
+
+  .logos {
+    width: 105px;
+  }
+
+  .top-bar {
+    width: 710px !important;
+    margin: 1% 0 0 3%;
+    padding-top: 2.5%;
+  }
+
+  .top-bar ul li a {
+    font-size: .7em !important;
+  }
+
+  .scsLogo{
+    margin-top: 2.5%;
+    width: 6%;
+  }
 }
 
 
 
 
-@media only screen and (min-width: 1154px) and (max-width: 1206px) {
+
+
+
+
+/*@media only screen and (min-width: 1154px) and (max-width: 1206px) {
   .top-bar {
     width: 950px !important;
     padding-top: 2.2%;
@@ -872,12 +1102,12 @@ ul li.slideUnder a {
   #header1 #socialNumber #socialWrap{
     width: 25% !important;
   }
-}
+}*/
 
 
 
 
-@media only screen and (min-width: 1101px) and (max-width: 1154px) {
+/*@media only screen and (min-width: 1101px) and (max-width: 1154px) {
   .top-bar {
     width: 900px !important;
     padding-top: 2.2%;
@@ -926,7 +1156,7 @@ ul li.slideUnder a {
   #header1 #socialNumber #socialWrap{
     width: 25% !important;
   }
-}
+}*/
 
 
 
