--- a/css/app.css
+++ b/css/app.css
@@ -820,6 +820,14 @@ ul li.slideUnder a {
   #header1 #socialNumber #socialWrap{
     width: 12%;
   }
+
+  #mission{
+    padding-top: 10%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -851,6 +859,14 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 10%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
   }
 }
 
@@ -884,6 +900,14 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 12%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -915,6 +939,14 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 12%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
   }
 }
 
@@ -948,6 +980,14 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 12%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
   }
 }
 
@@ -984,6 +1024,14 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -1018,6 +1066,14 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
   }
 }
 
@@ -1058,6 +1114,14 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -1096,6 +1160,14 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
   }
 }
 
@@ -1136,6 +1208,14 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -1174,6 +1254,18 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
+
+  #mission>div>div>div:nth-child(1) h1{
+    font-size: 3.8em;
   }
 }
 
@@ -1227,6 +1319,14 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 12%;
+  }
 }
 
 
@@ -1278,6 +1378,20 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 14%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 20%;
+    margin-left: 15%;
+    padding-top: 2%;
   }
 }
 
@@ -1332,6 +1446,20 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 15%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 20%;
+    margin-left: 15%;
+    padding-top: 2%;
   }
 }
 
@@ -1391,6 +1519,20 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 18%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 20%;
+    margin-left: 15%;
+    padding-top: 2%;
+  }
 }
 
 
@@ -1448,6 +1590,20 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 14%;
+  }
+
+  #mission > div{
+    padding-bottom: 18%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 20%;
+    margin-left: 15%;
+    padding-top: 2%;
   }
 }
 
@@ -1511,6 +1667,20 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 15%;
+  }
+
+  #mission > div{
+    padding-bottom: 18%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 20%;
+    margin-left: 15%;
+    padding-top: 2%;
+  }
 }
 
 
@@ -1572,6 +1742,29 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 8%;
+    padding-top: 2%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.4em;
+    line-height: 45px;
   }
 }
 
@@ -1637,13 +1830,36 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 8%;
+    padding-top: 3%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.4em;
+    line-height: 45px;
+  }
 }
 
 
 
 @media only screen and (min-width: 642px) and (max-width: 656px) {
   #header1 #socialNumber{
-    padding: .5% 0 4%;
+    padding: .5% 0 4.5%;
   }
 
   #header1 #socialNumber #socialWrap{
@@ -1702,6 +1918,29 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 8%;
+    padding-top: 3%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.4em;
+    line-height: 45px;
   }
 }
 
@@ -1802,6 +2041,29 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 8%;
+    padding-top: 3%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.4em;
+    line-height: 45px;
+  }
 }
 
 
@@ -1897,6 +2159,29 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 8%;
+    padding-top: 3%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.3em;
+    line-height: 45px;
+  }
 }
 
 
@@ -1991,6 +2276,29 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 25%;
+    margin-left: 2%;
+    padding-top: 3%;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.3em;
+    line-height: 45px;
   }
 }
 
@@ -2088,6 +2396,33 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 13%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 28%;
+    margin-left: 2%;
+    padding-top: 4%;
+  }
+
+  #mission > div > div > div:nth-child(1) h1{
+    font-size: 3.5em;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.3em;
+    line-height: 45px;
+  }
 }
 
 
@@ -2184,6 +2519,33 @@ ul li.slideUnder a {
   #bck {
     margin-left: -30% !important;
   }
+
+  #mission{
+    padding-top: 20%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 28%;
+    margin-left: 2%;
+    padding-top: 4%;
+  }
+
+  #mission > div > div > div:nth-child(1) h1{
+    font-size: 3em;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.3em;
+    line-height: 45px;
+  }
 }
 
 
@@ -2278,6 +2640,33 @@ ul li.slideUnder a {
 
   #bck {
     margin-left: -30% !important;
+  }
+
+  #mission{
+    padding-top: 20%;
+  }
+
+  #mission > div{
+    padding-bottom: 20%;
+  }
+
+  #mission > div > div > div:nth-child(1) .icons{
+    width: 28%;
+    margin-left: 2%;
+    padding-top: 4%;
+  }
+
+  #mission > div > div > div:nth-child(1) h1{
+    font-size: 2.8em;
+  }
+
+  .graphicEle{
+    margin-bottom: 5%;
+  }
+
+  #mission > div > div > div:nth-child(2) p{
+    font-size: 1.3em;
+    line-height: 45px;
   }
 }
 
